--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_liquid_glass
-description: "A new Flutter package project."
+description: A beautiful Flutter package for creating stunning liquid glass morphism UI effects. Transform your Flutter apps with elegant, modern glassmorphism designs.
 version: 0.0.1
-homepage:
+homepage: https://github.com/nugaysamil/flutter_liquid_glass
+repository: https://github.com/nugaysamil/flutter_liquid_glass
+issue_tracker: https://github.com/nugaysamil/flutter_liquid_glass/issues
 
 environment:
   sdk: ^3.5.4
