--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_liquid_glass
+name: flutter_liquid_glass_plus
 description: A beautiful Flutter package for creating stunning liquid glass morphism UI effects. Transform your Flutter apps with elegant, modern glassmorphism designs.
 version: 0.0.1
 homepage: https://github.com/nugaysamil/flutter_liquid_glass
