Rename flutter_liquid_glass package to flutter_liquid_glass_plus, update example app references, and introduce new LGDialog, LGMenu, LGMenuItem, and LGSheet widgets for enhanced glass UI components. These additions provide customizable dialog and menu options with liquid glass effects, improving user interaction and aesthetics.

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_liquid_glass_example
-description: Example app demonstrating flutter_liquid_glass package
+name: flutter_liquid_glass_plus_example
+description: Example app demonstrating flutter_liquid_glass_plus package
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_liquid_glass:
+  flutter_liquid_glass_plus:
     path: ../
 
 dev_dependencies:
