--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_liquid_glass_plus:
     path: ../
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
